--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,7 @@
 	<developers>
 		<developer>
 			<name>ZHONG Weikun</name>
+			<id>xiaoshenxian</id>
 			<email>zhong.weikun@live.com</email>
 			<url>https://github.com/xiaoshenxian</url>
 		</developer>
