--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
 	<groupId>com.eroelf</groupId>
 	<artifactId>javaxsx</artifactId>
-	<version>0.0.8-SNAPSHOT</version>
+	<version>0.0.9-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>javaxsx</name>
@@ -33,7 +33,7 @@
 		<url>https://github.com/xiaoshenxian/javaxsx</url>
 		<connection>scm:git:https://github.com/xiaoshenxian/javaxsx.git</connection>
 		<developerConnection>scm:git:git@github.com:xiaoshenxian/javaxsx.git</developerConnection>
-		<tag>javaxsx-0.0.8</tag>
+		<tag>HEAD</tag>
 	</scm>
 
 	<developers>
