--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
 	<groupId>com.eroelf</groupId>
 	<artifactId>javaxsx</artifactId>
-	<version>0.0.9</version>
+	<version>0.1.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>javaxsx</name>
@@ -61,9 +61,9 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.12</version>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-api</artifactId>
+			<version>5.3.2</version>
 			<scope>test</scope>
 		</dependency>
 
@@ -76,19 +76,19 @@
 		<dependency>
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
-			<version>2.8.0</version>
+			<version>2.8.5</version>
 		</dependency>
 
 		<dependency>
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
-			<version>18.0</version>
+			<version>26.0-jre</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.openstreetmap.osmosis</groupId>
 			<artifactId>osmosis-core</artifactId>
-			<version>0.46</version>
+			<version>0.47</version>
 			<exclusions>
 				<exclusion>
 					<artifactId>commons-logging</artifactId>
@@ -123,7 +123,7 @@
 		<dependency>
 			<groupId>org.geotools</groupId>
 			<artifactId>gt-api</artifactId>
-			<version>14.4</version>
+			<version>20.0</version>
 		</dependency>
 	</dependencies>
 
@@ -152,6 +152,7 @@
 					<target>${java.version}</target>
 					<fork>true</fork>
 					<compilerVersion>${java.version}</compilerVersion>
+					<encoding>${project.build.sourceEncoding}</encoding>
 					<compilerArgs>
 						<arg>-XDignore.symbol.file</arg>
 					</compilerArgs>
